@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.4.5
+VERSION=1.4.6
 
 DEPENDENCY="zeda=1.2.13;zm=1.2.6"
